--- a/Ejercicios-HTML/ej_noticia.html
+++ b/Ejercicios-HTML/ej_noticia.html
@@ -2,9 +2,11 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Ejercicio Columnas</title>
+
+    <title>Title</title>
 </head>
 <body>
+
 <!--Agregar la etiqueta semántica para la cabecera. La cabecera debe contener un titulo-->
 <!--Separe la noticia en parrafos-->
 Diario On-line
