Se agrego pagina html

--- a/Ejercicios-HTML/index.html
+++ b/Ejercicios-HTML/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="Martina Blason" name="author">
-    <meta content="html, cabeceras, etiquetas" name="keywords">
-    <title>Mi primera pagina web</title>
+    <meta name="author" content="Martina Blason">
+    <meta name="keywords" content="html, headers">
+    <meta name=" description" content="info related with web page">
+    <title>mi primera pagina</title>
 </head>
+
 <body>
-hola mundo
+hola mundo!
 </body>
 </html>
