--- a/Ejercicios-HTML/ej_noticia.html
+++ b/Ejercicios-HTML/ej_noticia.html
@@ -10,10 +10,12 @@
 <body>
 
 <header>
-
-   <h1>Diario On-line</h1>
     <img src="imagenes/logo_mundo.png">
+    <h1>Diario On-line</h1>
 </header>
+<nav>
+    <a href="ej_listas.html">Cocina</a>
+</nav>
 <section>
    <strong><h3>CordoBici</h3></strong>
 
