--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -1,43 +1,69 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Ejercicio Formulario</title>
-    <style>
-        form {
-            display: block;
-            margin-top: 0em;
-        }
-    </style>
-</head>
-<body>
-<!--Cree un Formulario con los campos que se proponen a continuacion-->
-<!--Agregue el atributo legend-->
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Ejercicio Formulario</title>
+        <style>
+            form {
+                display: block;
+                margin-top: 0em;
+            }
+        </style>
+    </head>
+    <body>
+    <!--Cree un Formulario con los campos que se proponen a continuacion-->
+    <!--Agregue el atributo legend-->
 
-<!--Si tienes dudas de como hacer un formulario, puedes consultar:
-    https://www.w3schools.com/html/tryit.asp?filename=tryhtml_elem_output-->
+    <!--Si tienes dudas de como hacer un formulario, puedes consultar:
+        https://www.w3schools.com/html/tryit.asp?filename=tryhtml_elem_output-->
 
-<h3>Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!</h3>
-Nombre:
-Apellido:
-Sexo: Masculino Femenino
-Edad:
-Email:
-Usuario:
-Password:
-Confirmar Password:
-
-Tipo de servicio: Free / Standard / Premium
-Tema:
-Política
-Negocios
-Tecnología
-Salud
-
-Agregue un comentario:
-
-Boton de Enviar
-
-
-</body>
-</html>
+    <h3>Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!</h3>
+    <form id="Formulario suscripcion">
+        <p>
+    Nombre:<input type="text" name="Nombre" placeholder="Nombre">
+        </p>
+        <p>
+    Apellido:<input type="text" name="Apellido" placeholder="Apellido">
+        </p>
+        <p>
+    Sexo: Masculino<input type="radio" name="sexo" value="Masculino">
+          Femenino <input type="radio" name="sexo" value="Femenino">
+        </p>
+        <p>
+    Edad: <input type="number" text="Edad" placeholder="Edad">
+        </p>
+        <p>
+    Email: <input type="email" name="Email" placeholder="email@dominio.com">
+        </p>
+        <p>
+    Usuario: <input type="text" name="Usuario" placeholder="Usuario">
+        </p>
+        <p>
+    Password:<input type="password" name="Password" placeholder="Password">
+        </p>
+        <p>
+    Confirmar Password:<input type="password" name="Confirmar_password" placeholder="password">
+        </p>
+    <p>
+    Tipo de servicio: Free <input type="checkbox" name="Tipo_servicio" value="free"> /
+        Standard <input type="checkbox" name="Tipo_servicio" value="Standard">/
+        Premium <input type="checkbox" name="Tipo_servicio" value="Premium">
+    </p>
+        <p>
+            Tema:
+            <select>
+          <option> Política</option>
+          <option> Negocios</option>
+          <option>Tecnología</option>
+          <option> Salud</option>
+        </select>
+        </p>
+    <p>
+        Agregue un comentario:<textarea></textarea>
+    </p>
+        <p>
+   <button type="button">Boton de Enviar</button>
+        </p>
+    </form>
+    </body>
+    </html>
