--- a/Ejercicios-JavaScript/grados_radianes.html
+++ b/Ejercicios-JavaScript/grados_radianes.html
@@ -14,11 +14,11 @@
     <form>
         <p>
             <label for="grados">Grados</label> =
-            <input id="grados" type="text" name="unid_grados" onchange="convertirGR (this.id)">
+            <input id="grados" type="text" name="unid_grados" onchange="convertirGR (this.id, this.value)">
         </p>
         <p>
             <label for="radianes">Radianes</label> =
-            <input id="radianes" type="text" name="unid_radianes" onchange="convertirGR (this.id)">
+            <input id="radianes" type="text" name="unid_radianes" onchange="convertirGR (this.id, this.value)">
         </p>
     </form>
 </div>
