--- a/Ejercicios-CSS/ej_cv.html
+++ b/Ejercicios-CSS/ej_cv.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CV Nombre Apellido</title>
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=0.1">
 </head>
 <body>
 
