--- a/Ejercicios-CSS/ej_cv.html
+++ b/Ejercicios-CSS/ej_cv.html
@@ -2,8 +2,17 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>CV Nombre Apellido</title>
+    <title>CV Martina Blason</title>
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=0.1">
+   <style>
+       body{
+           text-align: center;
+           font-family: 'Gugi', cursive;
+       }
+   </style>
+
+
+
 </head>
 <body>
 
