Se agrego ejercicio de formulario

--- a/Ejercicios-CSS/ej_cv.html
+++ b/Ejercicios-CSS/ej_cv.html
@@ -3,30 +3,31 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poetsen+One&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>CV Nombre Apellido</title>
-    <link rel="stylesheet" href="estilos.css" type="text/css">
+    <link rel="stylesheet "href="mi" type="text/css">
+
 </head>
 <body class="cvPrincipal">
 
 <div>
     <img src="imagenes/icono_usuario.jpg">
-    <h1 id="nombrePersona">Martina Blason</h1>
-    <h2>Ing. en Computacion</h2>
+    <h1 id="nombrePersona">Blason Martina</h1>
+    <h2>Ing. en Sistemas</h2>
 </div>
 
 <div>
     <h3>Datos Personales</h3>
-    <p><span>Fecha de Nacimiento:</span> dd/mm/aaaa</p>
-    <p><span>Email:</span> email@email.com</p>
+    <p><span>Fecha de Nacimiento:</span> 02/12/2004</p>
+    <p><span>Email:</span> 2319555@uuc.edu.ar</p>
 </div>
 
 <div>
     <h3>Formacion Academica</h3>
-    <p><span>Carrera:</span> Ingeniería XXXXX</p>
-    <p><span>Universidad:</span> Universidad Católica de Córdoba</p>
-    <p><span>Año de Ingreso:</span> 2018</p>
+    <p><span>Carrera:</span> Ingeniería Sistemas</p>
+    <p><span>Universidad:</span> Universidad Catolica de Cordoba</p>
+    <p><span>Año de Ingreso:</span> 2023</p>
 </div>
 
 <div>
